BugFix: Workaround for Window Flicker on App Start
This commit temporarily fixes the flickering of app window during app
open, possibly caused due to change of window size from normal to size
specified in package.json

Commit also corrects transparent option in package.json, and uses
transparent window to hide the "change in window size" visual effect

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,5 +1,6 @@
 html,body{
     height: 100%;
+    background-color: rgba(0,0,0,0);
 }
 
 body{
@@ -8,6 +9,9 @@ body{
     background-color: rgba(0,0,0,0);
 }
 
+.screen{
+    background-color: #fff;
+}
 .screen.has-sidebar{
     display: flex;
     height: 100%;
